Closed Bug 727742 Opened 13 years ago Closed 13 years ago

IonMonkey: SETPROP IC should ignore objects with watchpoints

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: dvander)

References

Details

Attachments

(1 file)

Should fix jit-test/tests/pic/watch1.js and watch2.js with --ion-eager -n.
Attached patch fixSplinter Review
Assignee: general → dvander
Status: NEW → ASSIGNED
Attachment #602244 - Flags: review?(jdemooij)
Attachment #602244 - Flags: review?(jdemooij) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: