SetPropertyIC should ignore objects with watchpoints (bug 727742, r=jandem).